...
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="category_prompt">Select Category</string>
    <string name="TOAST_STRING" />
    <string-array name="categories">
        <item>Select Category</item>
        <item>Appliances</item>
        <item>Automobiles</item>
        <item>Electronics</item>
        <item>Fashion</item>
...
